# LearningPython

./: .gitignore  Intro.ipynb  pyproject.toml
Inflation/BeveridgeCurve/: BeveridgeCurve.ipynb
Inflation/InflationExpectations/: InflationExpectations.ipynb  InflationExpectations_MichiganData.ipynb  InflationExpectations_SPFData.ipynb  InflationExpectations_TIPSData.ipynb  InflationExpectations_WebDataDownload.ipynb  michigan_inflation_medium_term.csv  michigan_inflation_short_term.csv  sca_table_32.csv  sca_table_33.csv  spf_meanLevel.xlsx
Inflation/InflationGaussianProcess/: Untitled.ipynb
Inflation/InflationGlobalFactor/: global_factor.ipynb
Inflation/InflationVsBrent/: US_Inflation_Vs_Brent.ipynb
LabourMarket/BeveridgeCurve/: BeveridgeCurve.ipynb
Recession/: US_recession_classic.ipynb
Various/: eurostat_data_import.ipynb
useful_functions/charts/: __init__.py  components_examples.ipynb
