[tool.poetry]
name = "learningpython"
version = "0.1.0"
description = ""
authors = ["Matteo Angeloni <mattange@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
pandas = "^2.2.2"
fredapi = "^0.5.2"
seaborn = "^0.13.2"
matplotlib = "3.9.0"
statsmodels = "^0.14.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipympl = "^0.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
